deluge, libtorrent-rasterbar: simplify boost +python26 installation instructions (no need to tell the user to manually deactivate an existing version; MacPorts will do so automatically)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71450 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/deluge/Portfile
+++ b/dports/net/deluge/Portfile
@@ -40,21 +40,9 @@ if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
         depends_lib-delete port:boost
 }
 
-pre-extract {
+pre-configure {
         if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
-            if { [file exists ${prefix}/lib/libboost_system-mt.dylib] } {
-                ui_error "
-****
-**** Deluge requires port boost installed with variant +python26.
-**** Please do the following then try installing deluge again:
-****
-****     sudo port deactivate boost
-****     sudo port install boost +python26
-****
-
-"
-            } else {
-                ui_error "
+            ui_error "
 ****
 **** Deluge requires port boost installed with variant +python26.
 **** Please do the following then try installing deluge again:
@@ -63,9 +51,7 @@ pre-extract {
 ****
 
 "
-            }
-            
-            error "Deluge requires boost +python26"
+            return -code error "incompatible boost installation"
         }
 }
 
