--- a/dports/net/libtorrent-rasterbar/Portfile
+++ b/dports/net/libtorrent-rasterbar/Portfile
@@ -36,32 +36,18 @@ if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
         depends_lib-delete port:boost
 }
 
-pre-extract {
+pre-configure {
         if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
-            if { [file exists ${prefix}/lib/libboost_system-mt.dylib] } {
-                ui_error "
+            ui_error "
 ****
-**** libtorrent-rasterbar requires port boost installed with variant +python26.
-**** Please do the following then try installing libtorrent-rasterbar again:
-****
-****     sudo port deactivate boost
-****     sudo port install boost +python26
-****
-
-"
-            } else {
-                ui_error "
-****
-**** libtorrent-rasterbar requires port boost installed with variant +python26.
-**** Please do the following then try installing libtorrent-rasterbar again:
+**** Deluge requires port boost installed with variant +python26.
+**** Please do the following then try installing deluge again:
 ****
 ****     sudo port install boost +python26
 ****
 
 "
-            }
-
-            error "libtorrent-rasterbar requires boost +python26"
+            return -code error "incompatible boost installation"
         }
 }
 
