py26-mapnik: copy code from deluge to ensure boost +python26 is installed; fixes #21789 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71451 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-mapnik/Portfile
+++ b/dports/python/py26-mapnik/Portfile
@@ -86,6 +86,25 @@ variant sqlite description {Builds port with SQLite3 plugin} {
 
 use_parallel_build  yes
 
+if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
+        depends_lib-delete port:boost
+}
+
+pre-configure {
+        if { ![file exists ${prefix}/lib/libboost_python-mt.dylib] } {
+            ui_error "
+****
+**** Deluge requires port boost installed with variant +python26.
+**** Please do the following then try installing deluge again:
+****
+****     sudo port install boost +python26
+****
+
+"
+            return -code error "incompatible boost installation"
+        }
+}
+
 configure.args      PREFIX=${prefix} \
                      CAIRO=False \
                      OPTIMIZATION=3 \
@@ -121,7 +140,3 @@ build {
 destroot {
     system "cd ${worksrcpath} && ${python} scons/scons.py install"
 }
-
-notes "\
-    This port requires boost +python26\
-    "
