PlasmaClient: add code from deluge Portfile to ensure boost is installed with the python26 variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71452 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -40,6 +40,22 @@ depends_lib                 port:bullet \
 # libhsplasma is not universal
 universal_variant           no
 
+if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
+    depends_lib-delete port:boost
+    pre-configure {
+        ui_error "
+****
+**** Deluge requires port boost installed with variant +python26.
+**** Please do the following then try installing deluge again:
+****
+****     sudo port install boost +python26
+****
+
+"
+        return -code error "incompatible boost installation"
+    }
+}
+
 post-extract {
     copy ${filespath}/PlasmaClient.in ${workpath}/PlasmaClient
 }
