py26-mapnik, deluge, libtorrent-rasterbar, PlasmaClient: use ${name} in error messages when boost is not installed with +python26 variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71454 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -45,8 +45,8 @@ if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
     pre-configure {
         ui_error "
 ****
-**** Deluge requires port boost installed with variant +python26.
-**** Please do the following then try installing deluge again:
+**** ${name} requires port boost installed with variant +python26.
+**** Please do the following then try installing ${name} again:
 ****
 ****     sudo port install boost +python26
 ****
