ucl: disable universal variant; see #21716
git-svn-id: https://svn.macports.org/repository/macports/trunk@71458 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/archivers/ucl/Portfile
+++ b/dports/archivers/ucl/Portfile
@@ -21,6 +21,8 @@ checksums		md5 852bd691d8abc75b52053465846fba34 \
 				sha1 5847003d136fbbca1334dd5de10554c76c755f7c \
 				rmd160 d1b50127d482481c125eabff9a9c157d491c4a6a
 
+universal_variant no
+
 configure.args	--enable-shared
 
 post-destroot {
