--- a/dports/archivers/upx/Portfile
+++ b/dports/archivers/upx/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name             upx
-version          3.04
-revision         1
+version          3.07
 categories       archivers
 maintainers      gmail.com:cedric.luthi
 description      compress or expand executable files
@@ -17,11 +16,9 @@ master_sites     ${homepage}/download/
 distname         ${name}-${version}-src
 use_bzip2        yes
 checksums        [suffix ${distname}] \
-                 md5     68d662b1f831335460f9bfdbf632c6ce \
-                 sha1    76e509efb52e1b891e929601f7cb8acbe349445e \
-                 rmd160  066103c97aa3a624af2903f3e23fb0fe952bffb7
-
-patchfiles       patch-p_mach.cpp
+                 md5     8186ab103288242f7e8ecad1acd4af03 \
+                 sha1    53692fa1662c4d6be0110e8b7976ab2f9cc6701e \
+                 rmd160  b0b0c01ddf3d958c5c3405106e70c7cd37f148bb
 
 universal_variant no
 use_configure    no
@@ -62,4 +59,4 @@ variant lzma description {Support LZMA compression} {
 
 livecheck.type  regex
 livecheck.url   ${homepage}
-livecheck.regex Version (\\d(\\.\\d+)*)
+livecheck.regex UPX (\\d(\\.\\d+)*)
