wesnoth: find Boost when prefix is not /opt/local
git-svn-id: https://svn.macports.org/repository/macports/trunk@71460 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -39,13 +39,15 @@ depends_lib             port:xorg-libX11 \
                         port:gettext \
                         port:zlib
 
+patchfiles              patch-m4-boost.m4.diff
+
 configure.args          --with-freetype-prefix=${prefix} \
                         --with-libiconv-prefix=${prefix} \
                         --disable-desktop-entry \
                         --disable-sdltest \
                         --disable-python \
                         --disable-server \
-                        --with-boost=${prefix}/include/boost
+                        --with-boost=${prefix}
 
 platform macosx {
     pre-destroot {
