wesnoth: autoreconf to use the boost.m4 patch previously committed
git-svn-id: https://svn.macports.org/repository/macports/trunk@71461 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -41,6 +41,8 @@ depends_lib             port:xorg-libX11 \
 
 patchfiles              patch-m4-boost.m4.diff
 
+use_autoreconf          yes
+
 configure.args          --with-freetype-prefix=${prefix} \
                         --with-libiconv-prefix=${prefix} \
                         --disable-desktop-entry \
