PlasmaClient: inform cmake where the python26 headers are; fixes build issue on Tiger
git-svn-id: https://svn.macports.org/repository/macports/trunk@71464 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -65,6 +65,8 @@ post-extract {
 #    reinplace {s/"Personal"/"Teledahn"/} ${worksrcpath}/plasmalib/prp/physics/pcCollisionDetector.cpp
 #}
 
+configure.args              -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers
+
 post-build {
     reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
 }
