PlasmaClient: fix build on Tiger by specifying the libraries to link to
git-svn-id: https://svn.macports.org/repository/macports/trunk@71465 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -80,6 +80,10 @@ post-destroot {
     xinstall -d -m 777 ${destroot}${prefix}/var/log/${name}
 }
 
+platform darwin 8 {
+    configure.ldflags-append -lcrypto -ljpeg -lz -lSDLmain
+}
+
 notes "
 To run PlasmaClient, write your Myst Online: URU Live again username and password into the preferences plist like this:
 
