vte: update dependencies, disable introspection, fix configuration for python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71466 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/vte/Portfile
+++ b/dports/gnome/vte/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            vte
 version         0.25.1
+revision        1
 set branch      [join [lrange [split $version .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -24,24 +25,25 @@ checksums       md5     986bdf8f4e25bdb30615b69b26289909 \
                 sha1    818130a91bc205c3165aa380dae43d12b733a406 \
                 rmd160  cfb094f4055dd98e3cfd6053efa2119034c81295
 
-depends_lib     port:py26-gtk \
-                port:gtk2 \
-                port:ncurses
+depends_lib     port:py26-gtk
 
-depends_build   port:p5-xml-parser \
-                port:intltool \
+depends_build   port:intltool \
                 port:pkgconfig
 
-if { ![file exists ${prefix}/include/gtk-2.0/gdk/gdkx.h] } {
-    patchfiles patch-x-display-missing.diff
-}
+patchfiles      patch-configure.diff
 
-configure.args  --disable-freetypetest
-configure.python ${prefix}/bin/python2.6
+configure.args  --disable-introspection
+
+configure.python            ${prefix}/bin/python2.6
+set python_prefix           ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path   ${python_prefix}/lib/pkgconfig
+configure.env               PATH=${python_prefix}/bin:$env(PATH)
 
 configure.cflags-append -fstrict-aliasing
 
-use_parallel_build  yes
+# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+
+universal_variant no
 
 variant without_python description {Disable Python support} {
     depends_lib-delete  port:py26-gtk
