sysutils/mdf2iso: Typo in description
git-svn-id: https://svn.macports.org/repository/macports/trunk@71468 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/mdf2iso/Portfile
+++ b/dports/sysutils/mdf2iso/Portfile
@@ -4,7 +4,7 @@ PortSystem 	   1.0
 name 		   mdf2iso
 version		   0.3.0
 homepage	   http://mdf2iso.berlios.de/
-description	   Tool to convert mdf (Alchol 120% images) images to iso images.
+description	   Tool to convert mdf (Alcohol 120% images) images to iso images.
 categories	   sysutils
 platforms      darwin
 use_bzip2      yes
