anjuta: update to version 2.30.2.1, dependencies, configuration, variants.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71469 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/anjuta/Portfile
+++ b/dports/gnome/anjuta/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            anjuta
-version         2.26.2.2
+version         2.30.2.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A GNOME/GTK IDE
 long_description        ${description}
@@ -14,40 +14,35 @@ platforms       darwin
 homepage        http://anjuta.sourceforge.net/
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     03191602895a4b0dd15a8298fc255657 \
-                sha1    e631bd5abc1ac3513b0b3af180a443f8d8687bf6 \
-                rmd160  c38fd4c200987d5f080a1a6e11dce08d7d498c37
-
-patchfiles      patch-libanjuta-anjuta-launcher.c.diff \
-                patch-libanjuta-anjuta-utils.c.diff
+checksums       md5     2bbae82e9938ce5db716ee7525c8e869 \
+                sha1    163de0820e9559353114484566425d155ea692af \
+                rmd160  9c864a7dc98e072c1bd1730ae7774d7d0b81f97b
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils \
                 port:gtk-doc
 
 depends_lib     port:autogen \
-                port:libgnomeui \
                 port:gconf \
                 port:gdl \
                 port:libgda4 \
                 port:libunique \
                 port:vte
 
-post-patch {
-        reinplace "s|/usr/bin/perl|${prefix}/bin/perl|" ${worksrcpath}/scripts/glade2schema.pl
-}
-
 configure.args  --enable-static \
                 --disable-scrollkeeper \
                 --disable-schemas-install \
                 --disable-plugin-devhelp \
                 --disable-plugin-glade \
-                --disable-graphviz \
                 --disable-plugin-sourceview \
-                --disable-plugin-valgrind \
                 --disable-plugin-subversion
+
+#
+# vte is not universal
+#
+
+universal_variant no
 
 variant devhelp description {Enable devhelp plugin support} {
                 configure.args-delete   --disable-plugin-devhelp
@@ -59,13 +54,7 @@ variant glade description {Enable glade plugin support} {
                 depends_lib-append      port:glade3
 }
 
-variant graphviz description {Enable class inheritance plugin support using graphviz} {
-                configure.args-delete   --disable-graphviz
-                depends_lib-append      path:bin/dot:graphviz
-}
-
 variant sourceview description {Enable gtksourceview editor plugin support instead of scintilla} {
-                configure.args-append   --disable-plugin-scintilla
                 configure.args-delete   --disable-plugin-sourceview
                 depends_lib-append      port:gtksourceview2
 }
@@ -76,10 +65,6 @@ variant subversion description {Enable subversion plugin support} {
                                         --with-svn-include=${prefix}/include/subversion-1 \
                                         --with-svn-lib=${prefix}/lib
                 depends_lib-append      port:subversion
-}
-
-post-destroot {
-        system "cd ${destroot}${prefix}/lib/anjuta && ln -s libfile-manager.dylib libfile-manager.so"
 }
 
 post-activate {
