--- a/dports/gnome/gnome-developer-tools/Portfile
+++ b/dports/gnome/gnome-developer-tools/Portfile
@@ -49,9 +49,9 @@ destroot        {
     reinplace "s|@PREFIX@|${prefix}|g" ${destroot}${prefix}/share/doc/gnome/README.${name}.txt
 }
 
-post-activate        {
-    ui_msg "\nTo start gnome put \"exec gnome-session\" in your .xinitrc"
-    ui_msg "See also http://trac.macports.org/wiki/GNOME\n"
-}
+notes "
+To start gnome put \"exec gnome-session\" in your .xinitrc
+See also http://trac.macports.org/wiki/GNOME
+"
 
 livecheck.type  none
