webkit-gtk:     * update to version 1.2.4, closes #26467.     * fix livecheck to track stable releases only.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71475 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/webkit-gtk/Portfile
+++ b/dports/www/webkit-gtk/Portfile
@@ -5,8 +5,7 @@ PortSystem	1.0
 
 name		webkit-gtk
 epoch           1
-version		1.2.3
-revision        1
+version		1.2.4
 description	Apple's WebKit HTML rendering library for GTK+
 long_description ${description}
 maintainers	gmail.com:myschizobuddy devans
@@ -17,9 +16,9 @@ master_sites    ${homepage}
 
 distname        webkit-${version}
 
-checksums           md5     0ab5c478a6f5b74a1ae96bf13a456662 \
-                    sha1    88c38ebeba187a062272b2aa8ca2bbd0bbb86306 \
-                    rmd160  41fa194de2865867dbf7d1156d0962a7580f2275
+checksums       md5     dc3a92dd0e8c2e70263fbfdf809b51a5 \
+                sha1    e4e31e6d5025d8c8d7ac81fe6d7c947918ce4790 \
+                rmd160  787997f6235911675726d903ff3b9549fb615fe5
 
 patchfiles      patch-WebKitTools-DumpRenderTree-gtk-TestNetscapePlugin-TestNetscapePlugin.cpp.diff \
                 TextBreakIterator.diff\
@@ -43,7 +42,8 @@ universal_variant   no
 
 # TODO: Use muniversal, so this is detected per arch
 configure.args	\
-        --enable-jit=no
+        --enable-jit=no \
+        --disable-introspection
 
 post-patch {
     reinplace "s|-licucore|-licui18n -licuuc|" ${worksrcpath}/configure
@@ -106,4 +106,4 @@ platform darwin 8 {
 
 livecheck.type  regex
 livecheck.url   http://webkitgtk.org/?page=download
-livecheck.regex "webkit-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+livecheck.regex webkit-(\[0-9\]+\\.\[0-9\]*\[02468\]\\.\[0-9\]+)
