wesnoth: fix incompatibility with boost 1.44.0 by re-enabling the use of deprecated functions; see #26449
git-svn-id: https://svn.macports.org/repository/macports/trunk@71476 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -51,6 +51,8 @@ configure.args          --with-freetype-prefix=${prefix} \
                         --disable-server \
                         --with-boost=${prefix}
 
+configure.cppflags-append   -DBOOST_IOSTREAMS_USE_DEPRECATED
+
 platform macosx {
     pre-destroot {
         xinstall -d ${destroot}${applications_dir}/Wesnoth.app/Contents/MacOS
