alacarte: update to version 0.13.1, fix python26 configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71477 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/alacarte/Portfile
+++ b/dports/gnome/alacarte/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            alacarte
-version         0.12.1
+version         0.13.1
 epoch           1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A simple freedesktop.org compliant menu editor for use with GNOME
@@ -20,15 +20,18 @@ master_sites    gnome:sources/${name}/${branch}/
 
 use_bzip2       yes
 
-checksums       md5     c6d77f7e5ee6129532e4bb1a35a07194 \
-                sha1    7407dcb4cd000e0991b12c53113615771fc385a7 \
-                rmd160  4fe59d1c6df2cdc8f22d901d9a3ce125bc9dc27d
+checksums       md5     b45232eaf093e7e1fbf99b335d8b880c \
+                sha1    bff3bfacaf0793951799bf29718b08b2f85d5f8d \
+                rmd160  66c7614b4ad6e48b8b26613d813f23c52b59a741
 
-patchfiles      patch-Makefile.in.diff \
-                patch-alacarte.in.diff
+depends_build   port:pkgconfig \
+                port:intltool
 
 depends_lib     port:py26-gtk \
                 port:gnome-menus
+
+patchfiles      patch-Makefile.in.diff \
+                patch-configure.diff
 
 configure.python ${prefix}/bin/python2.6
 
