--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -3,10 +3,11 @@
 PortSystem              1.0
 
 name                    wesnoth
-version                 1.4.7
+version                 1.8.4
 categories              games
 platforms               darwin
-maintainers             nomaintainer
+maintainers             nodetwo.com:jordan
+license                 GPL-2+
 homepage                http://www.wesnoth.org/
 master_sites            sourceforge
 use_bzip2               yes
@@ -22,9 +23,8 @@ long_description        Battle for Wesnoth is a fantasy turn-based strategy \
                         levels, and are carried over from one scenario to the \
                         next campaign.
 
-checksums               md5     fdd341c3d66bf1bea2113c79db852d68 \
-                        sha1    f8eb17e7a7aaff5d8fff1e18a1479efcf932fd27 \
-                        rmd160  8a515aca790424a550505512eb42b101860e87b2
+checksums               sha1    30b82e06523f9a82b770a6fc4e2d4251bd358eca \
+                        rmd160  86b6f6ca39cf87134d89e989ed20840836aeac28
 
 depends_lib             port:xorg-libX11 \
                         port:boost \
@@ -34,6 +34,9 @@ depends_lib             port:xorg-libX11 \
                         port:libsdl_ttf \
                         port:libsdl_net \
                         port:libiconv \
+                        port:lua \
+                        path:lib/pkgconfig/pango.pc:pango \
+                        port:fontconfig \
                         port:freetype \
                         port:fribidi \
                         port:gettext \
@@ -43,12 +46,14 @@ patchfiles              patch-m4-boost.m4.diff
 
 use_autoreconf          yes
 
-configure.args          --with-freetype-prefix=${prefix} \
-                        --with-libiconv-prefix=${prefix} \
+configure.args          --with-libiconv-prefix=${prefix} \
+                        --with-libintl-prefix=${prefix} \
+                        --with-zlib-prefix=${prefix} \
+                        --disable-dbus \
                         --disable-desktop-entry \
                         --disable-sdltest \
-                        --disable-python \
                         --disable-server \
+                        --disable-strict-compilation \
                         --with-boost=${prefix}
 
 configure.cppflags-append   -DBOOST_IOSTREAMS_USE_DEPRECATED
