--- a/dports/devel/gtk-osx-application/Portfile
+++ b/dports/devel/gtk-osx-application/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            gtk-osx-application
-version         0.9.5
+version         0.9.6
 categories      devel
 maintainers     elelay openmaintainer
 
@@ -19,13 +19,13 @@ long_description \
 homepage        http://live.gnome.org/GTK%2B/OSX/Integration
 platforms       darwin
 
-master_sites	http://sourceforge.net/projects/gtk-osx/files/GTK-OSX Build/
+master_sites	http://sourceforge.net/projects/gtk-osx/files/GTK-OSX%20Build/
 distname	    ige-mac-integration-${version}
 use_bzip2       yes
 
-checksums           md5     bd503b6e8626e09471e65cc8bc50ba7a \
-                    sha1    ae75e3f9270000adc28baaea7e5e1edd407cf90c \
-                    rmd160  6a28b7f5dc719bab973b72a5404524f9369104fd
+checksums           md5     f9783c2a93d330b4546243abe1386298 \
+                    sha1    07f76d449312baa14376aa24fc56ff216616c211 \
+                    rmd160  c2f5400c746d600367415d272ee68cc6a366dd20
 
 depends_build   port:pkgconfig
 
@@ -74,5 +74,8 @@ if {![variant_isset python25]} {
 configure.ccache	no
 configure.cmd-append    --libdir=${prefix}/lib --includedir=${prefix}/include
 
+# patch-src-gtkosxapplication_quartz-c.diff is a temporary patch for 0.9.6
+# see https://sourceforge.net/apps/trac/gtk-osx/ticket/41
 patchfiles-append       patch-bindings-python-gtk_osxapplication-Makefile-in.diff\
-                        patch-bindings-python-igemacintegration-Makefile-in.diff
+                        patch-bindings-python-igemacintegration-Makefile-in.diff\
+                        patch-src-gtkosxapplication_quartz-c.diff
