--- a/dports/math/gnudatalanguage/Portfile
+++ b/dports/math/gnudatalanguage/Portfile
@@ -15,7 +15,7 @@ long_description \
     A free IDL (Interactive Data Language) compatible \
     incremental compiler (ie. runs IDL programs).
 homepage                    http://gnudatalanguage.sourceforge.net/
-master_sites                sourceforge:gdl \
+master_sites                sourceforge:${name}:gdl \
                             ftp://ftp.soest.hawaii.edu/pwessel/gshhs:gshhs
 set gdlsrc          gdl-${version}.tar.gz
 set gshhssrc        gshhs_1.12_src.zip
