--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -42,7 +42,8 @@ depends_lib             port:xorg-libX11 \
                         port:gettext \
                         port:zlib
 
-patchfiles              patch-m4-boost.m4.diff
+patchfiles              patch-configure.ac.diff \
+                        patch-m4-boost.m4.diff
 
 use_autoreconf          yes
 
