wesnoth: restrict to 32-bit build; uses Carbon
git-svn-id: https://svn.macports.org/repository/macports/trunk@71484 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -12,6 +12,7 @@ homepage                http://www.wesnoth.org/
 master_sites            sourceforge
 use_bzip2               yes
 use_parallel_build      yes
+supported_archs         i386 ppc
 
 description             A fantasy turn-based strategy game
 
