py26-jinja: switch livecheck to pypi due to broken homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@71485 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-jinja/Portfile
+++ b/dports/python/py26-jinja/Portfile
@@ -28,5 +28,5 @@ checksums           md5 1235a005ade00b213800ff1e798c0241 \
 depends_lib-append  port:py26-distribute
 
 livecheck.type      regex
-livecheck.url       ${homepage}1/download
-livecheck.regex     {<h2>Latest Release: ([0-9.]+)</h2>}
+livecheck.url       http://pypi.python.org/pypi/Jinja/
+livecheck.regex     {Jinja ([0-9.]+)}
