R: fix package build errors (#26426)  * set r_arch environment variable and install into R's multi-platform    directory structure  * make installation of recommended packages a (default) variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71488 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/R/Portfile
+++ b/dports/math/R/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name             R
 version          2.11.1
+revision         1
 categories       math science
 maintainers      epfl.ch:kjell.konis
 platforms        darwin
@@ -43,6 +44,11 @@ depends_lib      port:gettext \
 
 universal_variant no
 
+variant recommended description {Install recommended R packages} {
+    configure.args-delete --without-recommended-packages
+    configure.args-append --with-recommended-packages
+}
+
 variant gcc42 conflicts gcc43 gcc44 description {Build with gcc42} {
     configure.compiler macports-gcc-4.2
     depends_lib-append port:gcc42
@@ -58,13 +64,17 @@ variant gcc44 conflicts gcc42 gcc43 description {Build with gcc44} {
     depends_lib-append port:gcc44
 }
 
+default_variants +recommended
+
 if {![variant_isset gcc42] && ![variant_isset gcc43] && ![variant_isset gcc44]} {
-    default_variants +gcc44
+    default_variants-append +gcc44
 }
 
 post-extract {
   reinplace "s|R_HOME|\"${prefix}/lib/R\"|" "${worksrcpath}/src/unix/Rscript.c"
 }
+
+configure.env-append r_arch=${build_arch}
 
 configure.args   --mandir=\\\${prefix}/share/man \
                  --enable-BLAS-shlib \
@@ -76,7 +86,8 @@ configure.args   --mandir=\\\${prefix}/share/man \
                  --with-tcl-config=${prefix}/lib/tclConfig.sh \
                  --with-tk-config=${prefix}/lib/tkConfig.sh \
                  --x-include=${prefix}/include \
-                 --x-lib=${prefix}/lib
+                 --x-lib=${prefix}/lib \
+                 --without-recommended-packages
 
 test.run         yes
 test.target      check
@@ -93,15 +104,18 @@ post-destroot {
     reinplace "s|${v}=${destroot}|${v}=|" "${destroot}${prefix}/lib/pkgconfig/libR.pc"
   }
 
-  foreach dylib [ exec find ${destroot}${prefix}/lib/R/lib -name "\*.dylib" ] {
+  reinplace "s|rlibdir=\$\{rhome\}/lib|rlibdir=\$\{rhome\}/lib/${build_arch}|" \
+            "${destroot}${prefix}/lib/pkgconfig/libR.pc"
+
+  foreach dylib [ exec find ${destroot}${prefix}/lib/R/lib/${build_arch} -name "\*.dylib" ] {
     regsub ":$" ${dylib} "" destroot_dylib_path
     regsub ${destroot} ${destroot_dylib_path} "" dylib_path
     system "install_name_tool -id ${dylib_path} ${destroot_dylib_path}"
-    system "install_name_tool -change libR.dylib ${prefix}/lib/R/lib/libR.dylib \
+    system "install_name_tool -change libR.dylib ${prefix}/lib/R/lib/${build_arch}/libR.dylib \
       ${destroot_dylib_path}"
-    system "install_name_tool -change libRblas.dylib ${prefix}/lib/R/lib/libRblas.dylib \
+    system "install_name_tool -change libRblas.dylib ${prefix}/lib/R/lib/${build_arch}/libRblas.dylib \
       ${destroot_dylib_path}"
-    system "install_name_tool -change libRlapack.dylib ${prefix}/lib/R/lib/libRlapack.dylib \
+    system "install_name_tool -change libRlapack.dylib ${prefix}/lib/R/lib/${build_arch}/libRlapack.dylib \
       ${destroot_dylib_path}"
   }
 
@@ -109,14 +123,14 @@ post-destroot {
     regsub ":$" ${so} "" destroot_so_path
     regsub ${destroot} ${destroot_so_path} "" so_path
     system "install_name_tool -id ${so_path} ${destroot_so_path}"
-    system "install_name_tool -change libR.dylib ${prefix}/lib/R/lib/libR.dylib \
+    system "install_name_tool -change libR.dylib ${prefix}/lib/R/lib/${build_arch}/libR.dylib \
       ${destroot_so_path}"
-    system "install_name_tool -change libRblas.dylib ${prefix}/lib/R/lib/libRblas.dylib \
+    system "install_name_tool -change libRblas.dylib ${prefix}/lib/R/lib/${build_arch}/libRblas.dylib \
       ${destroot_so_path}"
-    system "install_name_tool -change libRlapack.dylib ${prefix}/lib/R/lib/libRlapack.dylib \
+    system "install_name_tool -change libRlapack.dylib ${prefix}/lib/R/lib/${build_arch}/libRlapack.dylib \
       ${destroot_so_path}"
   }
 
   reinplace "s|-dylib_file libRblas\.dylib:\$\(R_HOME\)/lib\$\(R_ARCH\)/libRblas\.dylib| |" \
-            "${destroot}${prefix}/lib/R/etc/Makeconf"
+            "${destroot}${prefix}/lib/R/etc/${build_arch}/Makeconf"
 }
