--- a/dports/graphics/jasper/Portfile
+++ b/dports/graphics/jasper/Portfile
@@ -7,6 +7,7 @@ version         1.900.1
 revision        7
 categories      graphics
 platforms       darwin
+license         JasPer-2.0
 maintainers     jmr openmaintainer
 description     Library for manipulating JPEG-2000 images
 
