--- a/dports/python/py31-distribute/Portfile
+++ b/dports/python/py31-distribute/Portfile
@@ -6,6 +6,7 @@ PortGroup           python31 1.0
 name                py31-distribute
 version             0.6.14
 categories-append   devel
+license             PSF/ZPL
 maintainers         jmr openmaintainer
 description         Replacement for setuptools
 long_description \
