--- a/dports/python/py-game/Portfile
+++ b/dports/python/py-game/Portfile
@@ -9,6 +9,7 @@ version         1.9.1
 revision        3
 categories      python devel multimedia graphics
 platforms       darwin
+license         LGPL-2.1
 maintainers     nomaintainer
 description     pygame, python modules for writing games
 long_description    Pygame is a set of Python modules designed for \
