--- a/dports/python/py27-opengl-accelerate/Portfile
+++ b/dports/python/py27-opengl-accelerate/Portfile
@@ -7,6 +7,7 @@ name                py27-opengl-accelerate
 version             3.0.1
 categories-append   graphics
 platforms           darwin
+license             BSD
 maintainers         jmr openmaintainer
 description         Acceleration code for PyOpenGL
 long_description \
