py*-scipy: license
git-svn-id: https://svn.macports.org/repository/macports/trunk@71499 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-scipy/Portfile
+++ b/dports/python/py26-scipy/Portfile
@@ -8,6 +8,7 @@ name                    py26-scipy
 version                 0.8.0
 categories              python
 platforms               darwin
+license                 BSD
 maintainers             jmr ram openmaintainer
 description             An opensource library of scientific tools for Python
 long_description        ${description}.
