--- a/dports/python/py-scipy/Portfile
+++ b/dports/python/py-scipy/Portfile
@@ -7,6 +7,7 @@ name                    py-scipy
 version                 0.7.0
 categories              python
 platforms               darwin
+license                 BSD
 maintainers             nomaintainer
 description             An opensource library of scientific tools for Python
 long_description        ${description}
