--- a/dports/python/py25-scipy/Portfile
+++ b/dports/python/py25-scipy/Portfile
@@ -7,6 +7,7 @@ name                    py25-scipy
 version                 0.8.0
 categories              python
 platforms               darwin
+license                 BSD
 maintainers             ram openmaintainer
 description             An opensource library of scientific tools for Python
 long_description        ${description}
