sdl_sopwith: license
git-svn-id: https://svn.macports.org/repository/macports/trunk@71500 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/sdl_sopwith/Portfile
+++ b/dports/games/sdl_sopwith/Portfile
@@ -7,6 +7,7 @@ name                sdl_sopwith
 version             1.7.1
 categories          games
 platforms           darwin
+license             GPL-2
 maintainers         jmr openmaintainer
 description         Classic biplane shooter
 long_description    This is a port of the classic computer game \"Sopwith\" to run on modern \
