--- a/dports/devel/sdlconsole/Portfile
+++ b/dports/devel/sdlconsole/Portfile
@@ -7,8 +7,8 @@ name              sdlconsole
 version           2.1
 categories        devel multimedia
 platforms         darwin
-maintainers       jmr \
-		  openmaintainer
+license           LGPL-2+
+maintainers       jmr openmaintainer
 description       a Quake-style console for SDL programs
 long_description \
 	SDL_Console is a drop down console that can be easily added to any \
