--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -92,3 +92,8 @@ To run PlasmaClient, write your Myst Online: URU Live again username and passwor
 
 (replacing YOURUSERNAME with your username and YOURPASSWORD with your password). Then open PlasmaClient in ${applications_dir}.
 "
+
+livecheck.type              regex
+livecheck.url               ${hg.url}
+livecheck.version           [lindex [split ${version} -] 1]
+livecheck.regex             {rev (\d+)}
