python/quodlibet added library dependency to resolve runtime warning
git-svn-id: https://svn.macports.org/repository/macports/trunk@71507 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/quodlibet/Portfile
+++ b/dports/python/quodlibet/Portfile
@@ -6,7 +6,7 @@ PortGroup           python26 1.0
 
 name                quodlibet
 version             2.2.1
-revision            2
+revision            3
 categories-append   audio gnome
 maintainers         elelay rmstonecipher openmaintainer
 platforms           darwin
@@ -33,7 +33,8 @@ checksums           ${name}-${version}${extract.suffix} \
                     sha1    bd46e850a66630faec0b6885e98d5921f04c3637 \
                     rmd160  6cb4943d9469d74006cbedd340475a48cc360940
 
-depends_lib         port:gst-plugins-good \
+depends_lib         port:dbus-python26 \
+                    port:gst-plugins-good \
                     port:py26-gst-python \
                     port:py26-mutagen \
                     port:py26-feedparser \
