xournal: add missing libgnomecanvas dependency; see #25576
git-svn-id: https://svn.macports.org/repository/macports/trunk@71508 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xournal/Portfile
+++ b/dports/x11/xournal/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 
 name                    xournal
 version                 0.4.5
-revision                3
+revision                4
 categories              x11
 platforms               darwin
 maintainers             ryandesign
@@ -24,7 +24,8 @@ checksums               md5     795e4396ded2b67766eb2926be1fb4a9 \
                         sha1    390cb275774469ed1b04b7268dd625bd456c895e \
                         rmd160  a4228e6874482bd381c59cd8e3db1100361c1d40
 
-depends_lib             port:poppler
+depends_lib             port:libgnomecanvas \
+                        port:poppler
 
 patch.pre_args          -p1
 patchfiles              xournal-0.4.5-xoprint-len.patch
