xournal: add notes about disabling Use XInput
git-svn-id: https://svn.macports.org/repository/macports/trunk@71509 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xournal/Portfile
+++ b/dports/x11/xournal/Portfile
@@ -35,6 +35,10 @@ post-destroot {
     xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING ChangeLog README ${destroot}${prefix}/share/doc/${name}
 }
 
+notes {
+If you are unable to draw in Xournal, try disabling "Use XInput" in the Options menu.
+}
+
 livecheck.type          regex
 livecheck.url           http://sourceforge.net/projects/${name}/files/
 livecheck.regex         ${name}-(\[0-9.\]+)\\.tar
