--- a/dports/devel/buildbot/Portfile
+++ b/dports/devel/buildbot/Portfile
@@ -1,24 +1,26 @@
 # $Id$
 
 PortSystem		1.0
-PortGroup		python25 1.0
+PortGroup		python26 1.0
 
 name			buildbot
-version			0.7.11p3
+version			0.8.1
 categories		devel python
 platforms		darwin
-maintainers		free.fr:olv.bonnet
+maintainers		nomaintainer	
 description		compile/test cycle automation system
-long_description	The BuildBot is a system to automate the compile/test cycle required by most software projects to validate code changes.
+long_description	The BuildBot is a system to automate the \
+			compile/test cycle required by most \
+			software projects to validate code changes.
 
 homepage		http://buildbot.net/
 master_sites		sourceforge
 dist_subdir			${name}
-checksums           md5     6e4ef001d11caf270e2ed7d1d7d43318 \
-                    sha1    3c0fc8bbdb2db92450d7294da11fc40979e94e63 \
-                    rmd160  5fc1d9e1c32127109f58ea727cae2e6266b16fb9
+checksums           md5     53b7defb3f8919413907990269b7566d \
+                    sha1    7b26666514252f964cf4dbc6fea815999391d5de \
+                    rmd160  304cc59ad6f89fc79a3f9941581f5794198eab4b
 
-depends_lib-append	port:py25-twisted
+depends_lib-append	port:py26-twisted port:py26-jinja2
 
 post-destroot   {
         xinstall -m 644 ${worksrcpath}/README \
@@ -29,3 +31,4 @@ test.run		yes
 test.env		PYTHONPATH=.
 test.cmd		trial
 test.target		buildbot.test
+
