mysql5: fix build error in php5-mysql +mysql5; see #26480
git-svn-id: https://svn.macports.org/repository/macports/trunk@71511 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/mysql5/Portfile
+++ b/dports/databases/mysql5/Portfile
@@ -10,6 +10,7 @@ PortGroup               muniversal 1.0
 name                    mysql5
 conflicts               mysql5-devel mysql4
 version                 5.1.50
+revision                1
 set branch              [join [lrange [split ${version} .] 0 1] .]
 homepage                http://www.mysql.com/
 categories              databases
@@ -60,6 +61,7 @@ if {"darwin" == ${os.platform} && ${os.major} > 8} {
 
 patchfiles \
     patch-Makefile.in.diff \
+    patch-include-Makefile.in.diff \
     patch-mysql_secure_installation.sh.diff
 
 post-patch {
