Restore the symlinks removed in r64755. Fixes ticket #19626.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71514 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ccache/Portfile
+++ b/dports/devel/ccache/Portfile
@@ -4,9 +4,9 @@ PortSystem      1.0
 
 name            ccache
 version         2.4
-revision        3
+revision        4
 categories      devel
-maintainers     nomaintainer
+maintainers     landonf openmaintainer
 description     object-file caching compiler wrapper
 
 long_description \
@@ -32,10 +32,26 @@ post-patch {
 
 configure.args  --mandir=${prefix}/share/man
 
+set symlinks_dir    ${prefix}/libexec/ccache
+
 post-destroot {
+    file mkdir ${destroot}${symlinks_dir}
+
+    foreach {bin} {
+	    cc
+	    gcc gcc2    gcc3    gcc-3.3 gcc-4.0 gcc-4.2
+	    c++ c++3    c++-3.3 c++-4.0 c++-4.2
+	    g++ g++2    g++3    g++-3.3 g++-4.0 g++-4.2
+    } {
+        ln -sf ${prefix}/bin/ccache ${destroot}${symlinks_dir}/${bin}
+    }
+
     set docdir ${prefix}/share/doc/${name}-${version}
     xinstall -d ${destroot}${docdir}/html
     xinstall -m 0644 -W ${worksrcpath} COPYING README ${destroot}${docdir}
-    eval xinstall -m 0644 [glob ${worksrcpath}/web/*.html] \
-        ${destroot}${docdir}/html
+    eval xinstall -m 0644 [glob ${worksrcpath}/web/*.html] ${destroot}${docdir}/html
+}
+
+post-activate {
+    ui_msg "The ccache symlinks are installed in ${symlinks_dir}"
 }
