Fix an error in the dependency specification, and use use_configure no instead of configure {}.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71516 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/naturaldocs/Portfile
+++ b/dports/textproc/naturaldocs/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			naturaldocs
 version			1.5
+revision        1
 categories		textproc devel
 maintainers		landonf openmaintainer
 description		Documentation system for several programming languages
@@ -25,7 +26,8 @@ checksums       md5     0c6fc5b424e672350c9ae510cabdeca5 \
                 sha1    e506e2759f7436467d4b8dcb7b37300401d07008 \
                 rmd160  3c571a080090d02e90e84013c864608376a7fd7e
 
-depends_build   bin:perl:perl5 bin:flex:flex bin:bison:bison bin:ginstall:coreutils
+depends_lib    bin:perl:perl5
+use_configure no
 
 pre-extract {
     # The zip file extracts the files without a containing directory, so we create it here.
@@ -37,7 +39,6 @@ post-patch {
     system "chmod +x \"${worksrcpath}/NaturalDocs\""
 }
 
-configure {}
 build {}
 
 destroot {
