telepathy-mission-control: update to version 5.5.4, build python bindings using python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71520 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-mission-control/Portfile
+++ b/dports/comms/telepathy-mission-control/Portfile
@@ -4,14 +4,12 @@
 PortSystem      1.0
 
 name            telepathy-mission-control
-set sfname      mission-control
-version         4.67
-revision        1
+version         5.5.4
 categories      comms
 maintainers     devans openmaintainer
 platforms       darwin
-homepage        http://mission-control.sourceforge.net
-master_sites    sourceforge:${sfname}
+homepage        http://telepathy.freedesktop.org/wiki
+master_sites    http://telepathy.freedesktop.org/releases/${name}
 
 description     The ${name} component of Telepathy - a Flexible Communications Framework.
 
@@ -20,14 +18,24 @@ long_description \
                 providing a way for "end-user" applications to abstract some details of low \
                 level telepathy components such as connection managers.
 
-checksums       md5     0a547e7af4a33355bac3638dd2e40859 \
-                sha1    bd0c140e735b180c316b787078b773d7b6a324f8 \
-                rmd160  c0980b4761a942750b63e5c7a24d55a85d690e9f
+checksums       md5     fc6b3caab86a36b6884cb296206022d2 \
+                sha1    2f77d8fe806480cc232f64a6b19436838da69c43 \
+                rmd160  469dc27687e739aeb3328516ee02d9d539358750
 
 depends_build   port:pkgconfig \
                 port:libxslt \
                 port:gtk-doc
 
-depends_lib     port:libtelepathy \
-                port:gconf \
-                port:libgnome-keyring
+depends_lib     port:telepathy-glib \
+                port:libgnome-keyring \
+                port:python26
+
+patchfiles      patch-configure.diff
+
+configure.python ${prefix}/bin/python2.6
+
+configure.args  --enable-gnome-keyring
+
+livecheck.type  regex
+livecheck.url   ${master_sites}
+livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
