empathy: update to version 2.30.3, dependencies, configuration, use python26.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71521 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/empathy/Portfile
+++ b/dports/gnome/empathy/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		empathy
-version		2.26.2
+version		2.30.3
 set branch	[join [lrange [split ${version} .] 0 1] .]
 description	Empathy is an instant-messaging(chat) program for GNOME
 long_description \
@@ -17,47 +17,46 @@ platforms	darwin
 homepage	http://live.gnome.org/Empathy
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     7d42b4c54373c3706a3da301cd616329 \
-                sha1    d2eb4de3d3efd7728dc28eb16dfe60c64141be70 \
-                rmd160  58d995c9e616aa5d429dde9fad5861d66a33521f
+checksums       md5     d797f30219da87d4564fb92705626cd3 \
+                sha1    1a438198469f623e7051a521ef2590f0da518075 \
+                rmd160  57d558c81b166b8e008ee236a258d592b3ac50a3
 
 depends_build   port:pkgconfig \
                 port:intltool \
-                port:p5-xml-parser \
                 port:gnome-doc-utils \
                 port:gtk-doc
 
 depends_lib     port:gconf \
-                port:libglade2 \
-                port:gnome-panel \
-                port:telepathy-glib \
                 port:telepathy-mission-control \
-                port:telepathy-haze \
                 port:telepathy-farsight \
+                port:telepathy-haze \
                 port:enchant \
-                port:iso-codes \
-                port:libnotify \
                 port:evolution-data-server \
+                port:gstreamer \
+                port:iso-codes \
                 port:libcanberra \
-                port:gst-plugins-good \
-                port:gst-plugins-bad \
-                port:py25-gtk \
-                port:xorg-libX11
+                port:libchamplain \
+                port:libgnome-keyring \
+                port:libnotify \
+                port:libunique \
+                port:webkit-gtk 
 
 use_bzip2 	yes
+
+patchfiles      patch-configure.diff
 
 configure.args  --mandir=${prefix}/share/man \
                 --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
                 --disable-scrollkeeper \
-                --disable-schemas-install \
-                --with-compile-warnings=yes
+                --disable-schemas-install
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
 
 post-activate {
-   system "scrollkeeper-update"
-   system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+    system "scrollkeeper-update"
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
