dasher: update to version 4.11, dependencies, configuration, simplify post-activate gconf schema processing.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71522 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/dasher/Portfile
+++ b/dports/gnome/dasher/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            dasher
-version         4.10.1
+version         4.11
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Zooming text entry system.
 long_description \
@@ -21,17 +21,19 @@ homepage        http://www.gnome.org/
 use_bzip2       yes
 master_sites    gnome:sources/${name}/${branch}/
 
-checksums       md5     83e556690ac54c4bb8c49c050510259e \
-                sha1    bc2bd8c8c8f078f5290527f1525563d098f53b5d \
-                rmd160  0ed314ba5717f129168e315e02389259dc28532c
+checksums       md5     55695cacecb9fa9e3259e0f2ef82ae9e \
+                sha1    9acbbdbd7ad5d86bc310965c97e84b855d9be157 \
+                rmd160  e820fb276d7aa50fb7ee4010e2e763e21767e074
 
-depends_lib     port:libgnomeui \
-                port:at-spi \
-                port:libwnck
+depends_lib     port:gconf
 
-configure.args  --mandir=${prefix}/share/man \
+patchfiles      patch-configure.diff
+
+configure.args  --x-includes=${prefix}/include \
+                --x-libraries=${prefix}/lib \
                 --without-gvfs \
-                --disable-scrollkeeper
+                --disable-scrollkeeper \
+                --disable-schemas-install
 
 platform darwin 8 {
     configure.cxxflags-append -DWITH_DARWIN=1
@@ -47,47 +49,11 @@ variant gvfs description {build with gvfs from gio in glib} {
         depends_lib-append port:gvfs
 }
 
-set storagedir  ${prefix}/etc/macports/gconf
-set storagefile $storagedir/${name}
-
-post-destroot {
-    # Register schemas with gconf. See http://trac.macosforge.org/projects/macports/ticket/14729
-
-    # Find all .schemas file in the destroot
-    fs-traverse schema ${destroot}${prefix}/etc/gconf/schemas {
-        if { [ file isfile $schema ] } {
-            lappend schemafiles $schema
-        }
-    }
-
-    # And put them in etc/macports/gconf/$name
-    if { [ llength $schemafiles ] > 0 } {
-        file mkdir ${destroot}${storagedir}
-        set fh [open ${destroot}${storagefile} w]
-        foreach file $schemafiles {
-            puts $fh [exec basename $file]
-        }
-        close $fh
-    }
-}
-
 post-activate {
-    if { [file exists ${storagefile} ] } {
-        set fh [open ${storagefile} r]
-        while { ! [eof $fh] } {
-            lappend schemafiles [gets $fh]
-        }
-        close $fh
-    }
-
-    set schemastring [join $schemafiles " "]
-
-    system "cd ${prefix}/etc/gconf/schemas && \
-         GCONF_CONFIG_SOURCE=`${prefix}/bin/gconftool-2 --get-default-source` \
-         ${prefix}/bin/gconftool-2 --makefile-install-rule $schemastring"
-
     system "${prefix}/bin/scrollkeeper-update"
     system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type  regex
